@@ -1,6 +1,7 @@
 plugins {
     id("io.freefair.lombok")
     `java-library`
+    application
 }
 
 repositories {
@@ -11,8 +12,22 @@ dependencies {
     implementation(project(":core"))
 }
 
+application {
+    mainClass = "main"
+    applicationDefaultJvmArgs = listOf("--enable-preview")
+}
+
+tasks.named<JavaExec>("run") {
+    standardInput = System.`in`
+}
+
 java {
     toolchain {
         languageVersion.set(JavaLanguageVersion.of(21))
     }
+}
+
+tasks.withType<JavaCompile> {
+    options.compilerArgs.add("--enable-preview")
+
 }
